template.css
 body {
    font-family: "Railway", sans-serif;
}
 
 h1 {
    color: #ffc247;
    font-size: xx-large;
    text-align: center;
     
 }

 span{
    text-decoration: underline;
    text-decoration-thickness: 4.5px;
    text-decoration-color: #43b1ac;
   
}


 h3 {
     background: none;
     border: none;
     margin: 30px;
     padding: 0;
     cursor: pointer;
     font-size: x-large;
     
     font-weight: bold;
     /*font-size: x-large;*/
     text-align: center;
     
     color: #ffc247;
 }

 html {

     background-color: #000000;
     background-size: cover;
     
 }

 a:link {
     color: black;
     text-decoration: none;
 }

 a:visited {
     color: black;
     text-decoration: none;
 }

 h3:hover {
     color: #43b1ac;
 }

 button:hover {
     color: #43b1ac;
 }

 img.center {
     height: 150px;
     width: 150px;
     display: block;
     margin: 0 auto;

 }

 .modalbtn {
     color: #ffc247;
     background: none;
     border: none;
     padding: 0;
     cursor: pointer;
     font-size: x-large;
     font-weight: bold;
     
 }

 .floating {
     filter:  invert(74%) sepia(71%) saturate(474%) hue-rotate(338deg) brightness(101%) contrast(103%);
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     height: 100%;
     width: 100%;
     max-height: 300px;
     max-width: 300px;
     display: block;
     margin: 0 auto;
 }

 @keyframes floating {
     from {
         transform: translate(0, 0px);
     }

     65% {
         transform: translate(0, 15px);
     }

     to {
         transform: translate(0, -0px);
     }
 }

 h4 {
     color: #ffc247;
 }


 p {
    display: block;
     background: none;
     border:none;
     margin: auto;
     padding: 10;
     font-size: x-large; 
     font-weight: bold;
     /*font-size: x-large;*/
     text-align: center;
     color: lavender;
 }

.top_wrapper{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    padding: 10px;
}

img{
    filter:  invert(74%) sepia(71%) saturate(474%) hue-rotate(338deg) brightness(101%) contrast(103%);
    width: 50px;
    height: 50px;
}

img:hover{
    filter: invert(44%) sepia(18%) saturate(649%) hue-rotate(184deg) brightness(88%) contrast(92%);
}

